# wikidump

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  azure-pipelines.yml
.github/workflows/: rust.yml
benches/: enwiki-10k.xml  enwiki-10k.xml.bz2  wikipedia.rs
examples/: wikipedia.rs
src/: config.rs  lib.rs
tests/: enwiki-articles-partial.xml  parsing.rs  simplewiki.xml  simplewiki.xml.bz2
