[package]
name = "wikidump"
version = "0.1.0"
authors = ["camchenry <camchenry@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.16.1"
parse_wiki_text = "0.1.5"
rayon = "1.2.0"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "wikipedia"
harness = false