[package]
name = "wikidump"
description = "A library for parsing Mediawiki XML dumps"
repository = "https://github.com/camchenry/wikidump"
license = "MIT"
readme = "README.md"
version = "0.3.0"
authors = ["camchenry <camchenry@users.noreply.github.com>"]
edition = "2018"
include = ["Cargo.toml", "README.md", "LICENSE", "src/**/*.rs"]

[badges]
azure-devops = { project = "cmchenry/wikidump", pipeline = "camchenry.wikidump", build = "1" }

[dependencies]
quick-xml = "0.36.1"
parse_wiki_text = "0.1.5"
rayon = "1.2.0"
bzip2 = "0.4.4"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "wikipedia"
path = "benches/wikipedia.rs"
harness = false
